--- a/index.html
+++ b/index.html
@@ -130,6 +130,14 @@
         <td>6</td>
         <td><a class="btn btn__male">male</a></td>
     </tr>
+    <!--                    fiftenth person -->
+    <tr>
+        <td>sunday chizoba uchegbu</td>
+        <td>zack williams</td>
+        <td>imo State</td>
+        <td>8</td>
+        <td><a class="btn btn__male">male</a></td>
+    </tr>
 
 
     </table>
