--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <td>6</td>
         <td><a class="btn btn__male">male</a></td>
     </tr>
-    <!--                    fiftenth person -->
+    <!--                    sixteenth person -->
     <tr>
         <td>sunday chizoba uchegbu</td>
         <td>zack williams</td>
